# Weather-Trader

./: .env.example  .gitignore  .replit  ARCHITECTURE.md  CLAUDE.md  KBOS_MODEL_LAB_SPEC.txt  KBOS_PHASE_A_NOTES.txt  KBOS_SECOND_REVIEW.txt  MODEL_TRANSPARENCY.md  MODEL_TRANSPARENCY.txt  Model_Technical_Description.txt  Overview.md  SYSTEM_DESCRIPTION.txt  System_Redesign.txt  main.py  pyproject.toml  replit.md  requirements.txt
.claude/: settings.local.json
deploy/: README.md  dashboard.service  install_services.sh  migrate.sh  orchestrator.service  run_dashboard.sh  run_orchestrator.sh  setup_vm.sh
kalshi_weather_trader/: .env.example  IMPROVEMENTS.md  requirements.txt
kalshi_weather_trader/backtesting/: climatology.py  comparison.py  metrics.py  replay_engine.py  scenarios.py
kalshi_weather_trader/calibration/: calibrator.py
kalshi_weather_trader/config/: logging_config.py  settings.py
kalshi_weather_trader/db/: db_manager.py  schemas.py
kalshi_weather_trader/execution/: paper_trader.py  trader.py
kalshi_weather_trader/ingestion/: asos_fetcher.py  ensemble_fetcher.py  kalshi_fetcher.py  nwp_fetcher.py  nws_cli_fetcher.py
kalshi_weather_trader/quant/: edge_computer.py  kalman_filter.py  mc_params_builder.py  monte_carlo.py
kalshi_weather_trader/scheduler/: orchestrator.py
kalshi_weather_trader/tests/: test_backtesting.py  test_calibration.py  test_ingestion.py  test_kalman.py  test_model_lab.py  test_monte_carlo.py  (+5 more)
scripts/: backtest_analysis.py  export_db.sh
tasks/: todo.md
trading-engine/: .env.example  requirements.txt  run.py
(+26 files in other folders)
