[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["kalshi_weather_trader*"]

dependencies = [
    "apscheduler>=3.10",
    "cryptography>=42.0",
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=5.22",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "rich>=14.3.3",
    "scipy>=1.17.1",
    "streamlit>=1.35",
    "structlog>=25.5.0",
    "tabulate>=0.10.0",
    "tenacity>=9.1.4",
    "tzdata>=2025.3",
]
